--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"> 
-   <!--
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   -->
+  
 </head>
 <body>
   <div class="container-fluid">
-  <h1>Bienvenidos al portafolio de Fany</h1>
-  <h2>Mi Portafolio</h2>
+  <h1>SPIDERBOT</h1>
+  <h2>SPIDER BOT RENDER</h2>
+  <img src="..." class="img-fluid" alt="...">
   <img src="./assests/mole01.png" class="img-fluid" alt="la mole" srcset="">
   <img src="./assests/mole02.png" class="img-fluid" alt="la mole 2" srcset="">
   <img src="./assests/mole03.png" class="img-fluid" alt="el regreso de la mole" srcset="">
-  <!--
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  -->
+  
     </div>
 </body>
 </html>
