--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
   <div class="container-fluid">
   <h1>SPIDERBOT</h1>
   <h2>SPIDER BOT RENDER</h2>
-  <img src="..." class="img-fluid" alt="...">
-  <img src="./assests/mole01.png" class="img-fluid" alt="la mole" srcset="">
-  <img src="./assests/mole02.png" class="img-fluid" alt="la mole 2" srcset="">
-  <img src="./assests/mole03.png" class="img-fluid" alt="el regreso de la mole" srcset="">
+  <img src="./ASSETS/EXAMEN 2NDO PARCIAL.png" class="img-fluid" alt="SubstanceRender">
+  <img src="./ASSETS/A#8_SALM.png" class="img-fluid" alt="SubstanceRender">
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
