--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container-fluid">
   <h1>SPIDERBOT</h1>
-  <h2>SPIDER BOT RENDER</h2>
+  <h2>SpiderBot Render</h2>
   <img src="./ASSETS/EXAMEN 2NDO PARCIAL.png" class="img-fluid" alt="SubstanceRender">
   <img src="./ASSETS/A#8_SALM.png" class="img-fluid" alt="BlenderRender">
 
